[gd_scene load_steps=12 format=3 uid="uid://ccqoreueuxdb7"]

[ext_resource type="Script" path="res://assets/scripts/HUD.gd" id="1_8bs4p"]
[ext_resource type="Texture2D" uid="uid://b2w0n7vs40ktk" path="res://assets/sprites/hud_bars/bottom.png" id="2_jl3v8"]
[ext_resource type="Texture2D" uid="uid://dxfq2x57j2vm" path="res://assets/sprites/hud_bars/top_new.png" id="3_4bm3m"]
[ext_resource type="Texture2D" uid="uid://rh3sxam8isjm" path="res://assets/sprites/hud_bars/texture.png" id="4_2hixl"]
[ext_resource type="Texture2D" uid="uid://cp35k30xc2faq" path="res://art/HUB.png" id="5_jwupg"]
[ext_resource type="PackedScene" uid="uid://c00egfmkn80e6" path="res://assets/scenes/Potions.tscn" id="5_kv5n5"]
[ext_resource type="AudioStream" uid="uid://c32f3oisqirbn" path="res://assets/sound/Startgame.mp3" id="7_5cjpo"]

[sub_resource type="InputEventAction" id="InputEventAction_fopy7"]
action = &"start_game"

[sub_resource type="Shortcut" id="4"]
events = [SubResource("InputEventAction_fopy7")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcm0f"]
bg_color = Color(0.858824, 0, 0.184314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp17v"]
bg_color = Color(0.0352941, 0.517647, 0.85098, 1)

[node name="HUD" type="CanvasLayer" node_paths=PackedStringArray("HealthBar", "UnderlyingHealthBar", "ManaBar", "UnderlyingManaBar", "ColorFadeRect")]
script = ExtResource("1_8bs4p")
HealthBar = NodePath("HealthBar_simple")
UnderlyingHealthBar = NodePath("UnderlyingHealthBar")
ManaBar = NodePath("ManaBar_simple")
UnderlyingManaBar = NodePath("UnderlyingManaBar")
ColorFadeRect = NodePath("ColorFade")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -79.5
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Dodge the
Creeps"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
z_index = 1000
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -584.0
offset_right = 90.0
offset_bottom = -484.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
shortcut = SubResource("4")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar_simple" type="ProgressBar" parent="."]
visible = false
z_index = 10
offset_left = 122.0
offset_top = 1004.0
offset_right = 372.0
offset_bottom = 1074.0
rotation = -1.57001
theme_override_styles/fill = SubResource("StyleBoxFlat_dcm0f")
step = 1.0
value = 100.0
show_percentage = false

[node name="ManaBar_simple" type="ProgressBar" parent="."]
visible = false
z_index = 10
offset_left = 1742.0
offset_top = 1004.0
offset_right = 1992.0
offset_bottom = 1074.0
rotation = -1.57001
theme_override_styles/fill = SubResource("StyleBoxFlat_lp17v")
step = 1.0
value = 100.0
show_percentage = false

[node name="HealthBar" type="TextureProgressBar" parent="."]
z_index = 10
offset_left = 507.5
offset_top = 888.0
offset_right = 672.5
offset_bottom = 1054.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("2_jl3v8")
texture_over = ExtResource("3_4bm3m")
texture_progress = ExtResource("4_2hixl")
tint_under = Color(0.207843, 0.207843, 0.207843, 1)
tint_progress = Color(0.52549, 0.0509804, 0.0509804, 1)

[node name="UnderlyingHealthBar" type="TextureProgressBar" parent="."]
z_index = 9
offset_left = 506.5
offset_top = 888.0
offset_right = 673.5
offset_bottom = 1060.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("4_2hixl")
tint_under = Color(0.207843, 0.207843, 0.207843, 1)
tint_progress = Color(0.356863, 0, 0.00392157, 0.768627)

[node name="ManaBar" type="TextureProgressBar" parent="."]
z_index = 10
offset_left = 1207.5
offset_top = 888.0
offset_right = 1374.5
offset_bottom = 1060.0
value = 100.0
fill_mode = 3
texture_under = ExtResource("2_jl3v8")
texture_over = ExtResource("3_4bm3m")
texture_progress = ExtResource("4_2hixl")
tint_under = Color(0.207843, 0.207843, 0.207843, 1)
tint_progress = Color(0.0784314, 0.203922, 0.411765, 1)

[node name="UnderlyingManaBar" type="TextureProgressBar" parent="."]
z_index = 9
offset_left = 1205.5
offset_top = 888.0
offset_right = 1372.5
offset_bottom = 1060.0
value = 100.0
fill_mode = 3
texture_progress = ExtResource("4_2hixl")
tint_under = Color(0.207843, 0.207843, 0.207843, 1)
tint_progress = Color(0.0509804, 0.152941, 0.317647, 0.768627)

[node name="ColorFade" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 999
offset_left = -51.0
offset_top = 36.0
offset_right = 2093.0
offset_bottom = 1314.0
mouse_filter = 2

[node name="Hub" type="Sprite2D" parent="."]
position = Vector2(940, 975)
texture = ExtResource("5_jwupg")

[node name="Potions" parent="." instance=ExtResource("5_kv5n5")]
position = Vector2(767.5, 931)
scale = Vector2(0.5, 0.5)

[node name="Play" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5cjpo")

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
